Reworked comments
